# srp6-rs-poc

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: auth-proof.rs  auth.rs  client-proof-generator.rs  client-strong-proof.rs  main.rs  sign-on.rs
